# pixraper

./: .gitignore  CLAUDE.md  README.md  package.json  tailwind.config.cjs  tsconfig.json
.context/: review-fix-filter-works-count-cutoff.md  review-fix-remove-queue.md  spec-review-prompt.md
docs/: architecture.md
docs/specifications/: cookie-profiles.md  fix-analytics-lock-held-during-computation.md  fix-csv-roundtrip-fragile-parsing.md  fix-detail-fetch-hardcoded-interval.md  fix-get-all-tags-return-type.md  fix-load-dataset-return-value.md  fix-worker-stops-mid-queue.md  remove-dead-scraping-state.md  scraping-interval-range.md  scraping-reliability.md
docs/workflow/: cookie-profiles.md  scraping-interval-range.md  scraping-reliability.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: _scraper.rs  config.rs  csv.rs  lib.rs  main.rs  queue_state.rs  scraper.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/commands/: analytics.rs  config.rs  mod.rs  scraping.rs
src-tauri/src/scraper/: api.rs  csv.rs  mod.rs  queue.rs  scrape.rs  types.rs
src/lib/components/: Button.svelte  TagList.svelte  TopAppBar.svelte
src/routes/: +page.svelte
src/routes/analytics/: cooccurrenceAnalyze.svelte  main.svelte  rawCSV.svelte  tagRanking.svelte  timeAnalyze.svelte  type.d.ts
src/routes/analytics/components/: FiltersPanel.svelte
src/routes/analytics/tagRanking/: FiltersPanel.svelte  (+3 more)
src/routes/scraping/: main.svelte
src/routes/settings/: CookieProfileEditor.svelte  CookieProfileList.svelte  cookieParser.ts  main.svelte  type.d.ts
(+5 files in other folders)
