[package]
name = "pixraper"
version = "0.1.0"
description = "A Tauri App"
authors = ["gitdmnt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pixraper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["macros"] }
csv = "1.4.0"
futures = "0.3.31"
percent-encoding = "2.3.2"
chrono = "0.4.42"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio-util = "0.7.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
